[project]
name = "python"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "makinzm", email = "makinzm@makinzm.invalid" }
]
dependencies = [
    "numpy>=1.24.4",
    "ruff>=0.1.6",
    "lizard>=1.17.10",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true
