[project]
name = "python"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "makinzm", email = "makinzm@makinzm.invalid" }
]
dependencies = [
    "numpy>=1.24.4",
    "ruff>=0.1.6",
    "lizard>=1.17.10",
    "numba>=0.58.1",
    "mypy>=1.9.0",
    "pylyzer>=0.0.51",
    "pytest>=8.1.1",
    "pydantic>=2.6.4",
    "typing-extensions>=4.10.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["abc314"]

[tool.ruff]
# Set the maximum line length to 79.
line-length = 50

[tool.ruff.lint]
select = [
    "ALL"
]
ignore = [
    "N802",     # Function Name
    "N803",     # Argument Name
    "N806",     # Variable Name
    "N816",     # mixed Case Name
    "N999",     # File name
    "D205",     # Blank Line
    "D415",     # End punctuation
    "E501",     # line length
    "T201",     # print
    "TRY003",   # Try Specifying Message
    "ANN204",   # __init__ return type
    "INP001",   # __init__.py
]

[tool.ruff.lint.pydocstyle]
convention = "google"
