[project]
name = "python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.4"
dependencies = [
    "numpy==1.24.1",
    "scipy==1.10.1",
    "networkx==3.0",
    "sympy==1.11.1",
    "sortedcontainers==2.4.0",
    "more-itertools==9.0.0",
    "shapely==2.0.0",
    "bitarray==2.6.2",
    "pulp==2.7.0",
    "mpmath==1.2.1",
    "pandas==1.5.2",
    "z3-solver==4.12.1.0",
    "scikit-learn==1.2.0",
    "ortools==9.5.2237",
    "setuptools==66.0.0",
    "numba==0.57.0",
    "pip>=24.3.1",
]
